--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <title>Jack Simm Portfolio</title>
   <style>
     :root {
-      --bg: #121212;
-      --fg: #ffffff;
-      --accent: #00bfa6;
-      --font: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      --bg: #ffffff;
+      --fg: #333333;
+      --accent: #007acc;
+      --font: 'Georgia', serif;
     }
     * {
       box-sizing: border-box;
@@ -23,55 +23,32 @@
       line-height: 1.6;
       padding-bottom: 60px;
     }
-    header {
-      text-align: center;
-      padding: 60px 20px 40px;
-    }
-    header h1 {
-      font-size: 2.5rem;
-      color: var(--accent);
-    }
-    header p {
-      font-size: 1.2rem;
-      color: #ccc;
-    }
     nav {
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-      padding: 20px;
-      background-color: #1e1e1e;
+      background: #f4f4f4;
+      padding: 16px;
+      text-align: center;
     }
     nav a {
       color: var(--fg);
       text-decoration: none;
+      margin: 0 15px;
       font-weight: bold;
-      transition: color 0.2s ease;
     }
     nav a:hover {
       color: var(--accent);
     }
-    section {
+    main {
       max-width: 900px;
       margin: 40px auto;
       padding: 0 20px;
     }
-    h2 {
+    h1, h2, h3 {
       color: var(--accent);
-      font-size: 1.8rem;
-      margin-bottom: 16px;
-    }
-    ul li {
-      margin-bottom: 10px;
     }
     .project {
       border-left: 4px solid var(--accent);
       padding-left: 16px;
       margin-bottom: 30px;
-    }
-    .project h3 {
-      margin-bottom: 6px;
-      color: var(--fg);
     }
     .project img {
       max-width: 100%;
@@ -79,77 +56,30 @@
       border-radius: 4px;
     }
     footer {
-      position: fixed;
-      bottom: 0;
-      left: 0;
-      width: 100%;
       text-align: center;
-      background-color: #1e1e1e;
+      background-color: #f4f4f4;
       color: #888;
       font-size: 0.9rem;
       padding: 10px 0;
+      position: fixed;
+      bottom: 0;
+      width: 100%;
     }
   </style>
 </head>
 <body>
   <nav>
-    <a href="#about">About</a>
-    <a href="#experience">Experience</a>
-    <a href="#projects">Projects</a>
-    <a href="#skills">Skills</a>
-    <a href="#contact">Contact</a>
+    <a href="about.html">About</a>
+    <a href="experience.html">Experience</a>
+    <a href="projects.html">Projects</a>
+    <a href="skills.html">Skills</a>
+    <a href="contact.html">Contact</a>
   </nav>
 
-  <header>
-    <h1>Jack Simm</h1>
-    <p>Product Designer / Product Development Manager</p>
-  </header>
-
-  <section id="about">
-    <h2>About</h2>
-    <p>I am a passionate product designer currently studying at Middlesex University. With a background in manufacturing and engineering, I combine hands-on industry experience with creative design thinking. My journey has included apprenticeships, technical education, and working with tier-one automotive suppliers.</p>
-  </section>
-
-  <section id="experience">
-    <h2>Experience</h2>
-    <ul>
-      <li><strong>Product Development Manager</strong> – Fabb Brothers (2024)</li>
-      <li><strong>Kaizen Team</strong> – Unipres UK (2022–2023)</li>
-      <li><strong>Cost Planning</strong> – Unipres UK (2021–2022)</li>
-      <li><strong>Engineering Maintenance Technician</strong> – Unipres UK (2017–2021)</li>
-    </ul>
-  </section>
-
-  <section id="projects">
-    <h2>Projects</h2>
-    <div class="project">
-      <h3>Grown With Care</h3>
-      <p>A smart plant pot system that uses sensors to monitor moisture and ownership duration. Includes potential for app connectivity and user interaction feedback via visual indicators.</p>
-      <img src="IMG_0633.PNG" alt="Grown With Care" />
-    </div>
-    <div class="project">
-      <h3>Jerry Can Tool</h3>
-      <p>Developed an ergonomic tool for chefs to open slippery jerry cans in commercial kitchens. Focused on CAD precision, physical testing, and fit tolerance.</p>
-      <img src="Artboard 1.JPG" alt="Jerry Can Tool" />
-    </div>
-    <div class="project">
-      <h3>Transport Device</h3>
-      <p>A two-year design journey exploring mobility solutions. Combined original manufacturer parts with modern innovations for improved usability.</p>
-    </div>
-  </section>
-
-  <section id="skills">
-    <h2>Skills</h2>
-    <p><strong>Software:</strong> Illustrator, InDesign, Photoshop, SolidWorks, Keyshot, Shapr3D</p>
-    <p><strong>Capabilities:</strong> CAD modeling, rapid prototyping, product development, user-centered design</p>
-  </section>
-
-  <section id="contact">
-    <h2>Contact</h2>
-    <p>Email: jack.simm.design@gmail.com</p>
-    <p>Phone: +44 7375845 232</p>
-    <p>Location: London</p>
-  </section>
+  <main>
+    <h1>Welcome to Jack Simm's Portfolio</h1>
+    <p>Explore my background, work, and contact details using the navigation above.</p>
+  </main>
 
   <footer>
     &copy; 2025 Jack Simm – Portfolio
