--- a/index.html
+++ b/index.html
@@ -6,21 +6,21 @@
   <title>Jack Simm Portfolio</title>
   <style>
     body {
-      font-family: Georgia, serif;
+      font-family: 'Segoe UI', Tahoma, sans-serif;
       background: #ffffff;
-      color: #333;
+      color: #444;
       line-height: 1.6;
       margin: 0;
       padding: 0;
+      text-align: center;
     }
     nav {
       background: #f4f4f4;
       padding: 16px;
-      text-align: center;
     }
     nav a {
       margin: 0 12px;
-      color: #333;
+      color: #444;
       text-decoration: none;
       font-weight: bold;
     }
@@ -28,22 +28,27 @@
       color: #007acc;
     }
     main {
-      max-width: 800px;
+      max-width: 900px;
       margin: 40px auto;
       padding: 0 20px;
     }
-    h1, h2 {
+    h1, h2, h3 {
       color: #007acc;
     }
     .project {
       border-left: 4px solid #007acc;
       padding-left: 16px;
       margin-bottom: 30px;
+      text-align: left;
     }
     .project img {
       max-width: 100%;
       margin-top: 10px;
       border-radius: 4px;
+    }
+    ul {
+      list-style: none;
+      padding-left: 0;
     }
     ul li {
       margin-bottom: 12px;
