--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       padding: 0 20px;
     }
     h1, h2, h3 {
-      color: #007acc;
+      color: #222;
     }
     .project {
       border-left: 4px solid #007acc;
@@ -135,3 +135,4 @@
   </footer>
 </body>
 </html>
+
