--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       font-weight: bold;
     }
     nav a:hover {
-      color: #007acc;
+      color: #222;
     }
     main {
       max-width: 900px;
@@ -36,7 +36,7 @@
       color: #222;
     }
     .project {
-      border-left: 4px solid #007acc;
+      border-left: 4px solid #222;
       padding-left: 16px;
       margin-bottom: 30px;
       text-align: left;
@@ -135,4 +135,3 @@
   </footer>
 </body>
 </html>
-
