--- a/index.html
+++ b/index.html
@@ -61,7 +61,10 @@
       padding: 12px 0;
       margin-top: 40px;
     }
-  </style>
+  a, a:visited, a:hover, a:active {
+  color: #222 !important;
+}
+</style>
 </head>
 <body>
   <nav>
