--- a/index.html
+++ b/index.html
@@ -61,8 +61,9 @@
       padding: 12px 0;
       margin-top: 40px;
     }
-  a, a:visited, a:hover, a:active {
+  a, a:link, a:visited, a:hover, a:active {
   color: #222 !important;
+  text-decoration: none;
 }
 </style>
 </head>
