--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Jack Simm – Product Designer</title>
   <style>
     body {
@@ -19,30 +19,31 @@
       justify-content: space-between;
       align-items: center;
       padding: 20px 40px;
+      font-weight: bold;
       background: transparent;
-      font-size: 1rem;
     }
     header .left, header .right {
-      font-weight: bold;
+      font-size: 1rem;
     }
     main {
-      display: flex;
       flex: 1;
+      display: flex;
       align-items: center;
       justify-content: center;
       padding: 60px 20px;
     }
     .container {
       max-width: 1000px;
-      background: white;
+      background: #ffffff;
       border-radius: 16px;
       padding: 40px;
       box-shadow: 0 10px 40px rgba(0,0,0,0.1);
       display: flex;
       gap: 60px;
+      flex-wrap: wrap;
     }
     .info {
-      flex: 1;
+      flex: 1 1 400px;
     }
     .info h1 {
       font-size: 2.5rem;
@@ -56,14 +57,14 @@
       display: inline-block;
       margin-top: 20px;
       background: #222;
-      color: white;
+      color: #fff;
       padding: 10px 20px;
       border-radius: 5px;
       text-decoration: none;
       font-weight: bold;
     }
     .details {
-      flex: 1;
+      flex: 1 1 400px;
       display: flex;
       flex-direction: column;
       gap: 20px;
@@ -74,8 +75,7 @@
     }
     .details ul {
       list-style: none;
-      padding: 0;
-      margin: 0;
+      padding-left: 0;
     }
     .details li {
       margin-bottom: 8px;
@@ -98,7 +98,7 @@
     <div class="container">
       <div class="info">
         <h1>Jack Simm</h1>
-        <p>Product Designer and Development Manager with a strong background in engineering and manufacturing. I specialise in innovative problem-solving, user-focused design, and delivering practical solutions in real-world settings.</p>
+        <p>Product Designer and Development Manager with a background in engineering and manufacturing. I specialise in innovative problem-solving, user-focused design, and delivering practical solutions in real-world settings.</p>
         <p>Currently studying Product Design at Middlesex University, with experience leading design and production teams, improving operations, and managing design projects in fast-paced environments.</p>
         <a class="button" href="#">Download CV</a>
       </div>
@@ -107,10 +107,10 @@
         <div>
           <h3>Experience</h3>
           <ul>
-            <li><strong>Product Development Manager</strong>, Fabb Brothers (2024)</li>
-            <li><strong>Kaizen Team Member</strong>, Unipres UK (2022–2023)</li>
-            <li><strong>Cost Planning Analyst</strong>, Unipres UK (2021–2022)</li>
-            <li><strong>Engineering Maintenance Technician</strong>, Unipres UK (2017–2021)</li>
+            <li><strong>Product Development Manager</strong> – Fabb Brothers (2024)</li>
+            <li><strong>Kaizen Team Member</strong> – Unipres UK (2022–2023)</li>
+            <li><strong>Cost Planning Analyst</strong> – Unipres UK (2021–2022)</li>
+            <li><strong>Engineering Maintenance Technician</strong> – Unipres UK (2017–2021)</li>
           </ul>
         </div>
         <div>
@@ -136,7 +136,7 @@
   </main>
 
   <footer>
-    &copy; 2025 Jack Simm – Portfolio Site
+    &copy; 2025 Jack Simm – Portfolio
   </footer>
 </body>
 </html>
