--- a/index.html
+++ b/index.html
@@ -166,9 +166,9 @@
     <section id="gallery" style="width:100%; padding:60px 20px; background:#f7f7f7; text-align:center;">
     <h2 style="font-size:2rem; margin-bottom:20px;">Gallery</h2>
     <div style="display:flex; flex-wrap:wrap; justify-content:center; gap:20px; max-width:1000px; margin:0 auto;">
-      <img src="https://via.placeholder.com/300x200" alt="Gallery Image 1" style="border-radius:8px; width:300px; height:auto;">
-      <img src="https://via.placeholder.com/300x200" alt="Gallery Image 2" style="border-radius:8px; width:300px; height:auto;">
-      <img src="https://via.placeholder.com/300x200" alt="Gallery Image 3" style="border-radius:8px; width:300px; height:auto;">
+      <img src="IMG_0633.PNG" alt="Grown With Care render" style="border-radius:8px; width:300px; height:auto;">
+      <img src="Artboard 1.JPG" alt="Jerry Can Tool render" style="border-radius:8px; width:300px; height:auto;">
+      
     </div>
   </section>
 </main>
@@ -178,3 +178,4 @@
   </footer>
 </body>
 </html>
+
