--- a/index.html
+++ b/index.html
@@ -164,13 +164,18 @@
       </div>
     </div>
     <section id="gallery" style="width:100%; padding:60px 20px; background:#f7f7f7; text-align:center;">
-    <h2 style="font-size:2rem; margin-bottom:20px;">Gallery</h2>
-    <div style="display:flex; flex-wrap:wrap; justify-content:center; gap:20px; max-width:1000px; margin:0 auto;">
+  <h2 style="font-size:2rem; margin-bottom:20px;">Gallery</h2>
+  <div style="display:flex; flex-wrap:wrap; justify-content:center; gap:20px; max-width:1000px; margin:0 auto;">
+    <div>
       <img src="IMG_0633.PNG" alt="Grown With Care render" style="border-radius:8px; width:300px; height:auto;">
-      <img src="Artboard 1.JPG" alt="Jerry Can Tool render" style="border-radius:8px; width:300px; height:auto;">
-      
+      <p>Grown With Care</p>
     </div>
-  </section>
+    <div>
+      <img src="Artboard 1.JPG" alt="Jerry Can Tool render" style="border-radius:8px; width:300px; height:auto;">
+      <p>Jerry Can Tool</p>
+    </div>
+  </div>
+</section>
 </main>
 
   <footer>
@@ -178,4 +183,3 @@
   </footer>
 </body>
 </html>
-
