--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
   <header>
     <div class="left">≡ Jack Simm</div>
     <div class="dropdown">
-      <a href="#projects">Projects</a>
-      <a href="#gallery">Gallery</a>
+      <a href="projects.html">Projects</a>
+      <a href="gallery.html">Gallery</a>
     </div>
     <div class="right">Contact</div>
   </header>
@@ -163,20 +163,7 @@
         </div>
       </div>
     </div>
-    <section id="gallery" style="width:100%; padding:60px 20px; background:#f7f7f7; text-align:center;">
-  <h2 style="font-size:2rem; margin-bottom:20px;">Gallery</h2>
-  <div style="display:flex; flex-wrap:wrap; justify-content:center; gap:20px; max-width:1000px; margin:0 auto;">
-    <div>
-      <img src="IMG_0633.PNG" alt="Grown With Care render" style="border-radius:8px; width:300px; height:auto;">
-      <p>Grown With Care</p>
-    </div>
-    <div>
-      <img src="Artboard 1.JPG" alt="Jerry Can Tool render" style="border-radius:8px; width:300px; height:auto;">
-      <p>Jerry Can Tool</p>
-    </div>
-  </div>
-</section>
-</main>
+  </main>
 
   <footer>
     &copy; 2025 Jack Simm – Portfolio
