--- a/gallery.html
+++ b/gallery.html
@@ -6,39 +6,31 @@
   <title>Gallery – Jack Simm</title>
   <style>
     body {
-      margin: 0;
       font-family: 'Segoe UI', Tahoma, sans-serif;
+      margin: 0;
       background: #f7f7f7;
       color: #222;
-      text-align: center;
     }
     nav {
       background: #fff;
       padding: 20px;
+      text-align: center;
       font-weight: bold;
     }
     nav a {
       margin: 0 15px;
-      text-decoration: none;
       color: #222;
-    }
-    h1 {
-      margin-top: 40px;
+      text-decoration: none;
     }
     .gallery {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
       gap: 20px;
-      padding: 40px 20px;
-      max-width: 1000px;
-      margin: 0 auto;
+      padding: 40px;
     }
-    .gallery-item {
+    .gallery img {
       width: 300px;
-    }
-    .gallery-item img {
-      width: 100%;
       border-radius: 8px;
     }
   </style>
@@ -48,17 +40,12 @@
     <a href="index.html">Home</a>
     <a href="projects.html">Projects</a>
     <a href="gallery.html">Gallery</a>
+    <a href="cv.html">CV</a>
   </nav>
-  <h1>Gallery</h1>
+  <h1 style="text-align:center;">Gallery</h1>
   <div class="gallery">
-    <div class="gallery-item">
-      <img src="IMG_0633.PNG" alt="Grown With Care">
-      <p>Grown With Care</p>
-    </div>
-    <div class="gallery-item">
-      <img src="Artboard 1.JPG" alt="Jerry Can Tool">
-      <p>Jerry Can Tool</p>
-    </div>
+    <div><img src="IMG_0633.PNG" alt="Grown With Care" /><p>Grown With Care</p></div>
+    <div><img src="Artboard 1.JPG" alt="Jerry Can Tool" /><p>Jerry Can Tool</p></div>
   </div>
 </body>
 </html>
