--- a/projects.html
+++ b/projects.html
@@ -6,8 +6,8 @@
   <title>Projects – Jack Simm</title>
   <style>
     body {
-      margin: 0;
       font-family: 'Segoe UI', Tahoma, sans-serif;
+      margin: 0;
       background: #ffffff;
       color: #222;
     }
@@ -38,21 +38,75 @@
     <a href="index.html">Home</a>
     <a href="projects.html">Projects</a>
     <a href="gallery.html">Gallery</a>
+    <a href="cv.html">CV</a>
   </nav>
   <div class="container">
     <h1>Projects</h1>
     <div class="project">
       <h3>Grown With Care</h3>
-      <p>Smart plant pot with sensors for tracking soil and ownership.</p>
+      <p>Smart plant pot with moisture and time-tracking sensors, future app integration.</p>
     </div>
     <div class="project">
       <h3>Jerry Can Tool</h3>
-      <p>Ergonomic opening tool for chefs and commercial kitchens.</p>
+      <p>Chef-safe ergonomic opener for large commercial containers using CAD and testing.</p>
     </div>
     <div class="project">
       <h3>Transport Device</h3>
-      <p>Mobility design using retrofitted parts and custom solutions.</p>
+      <p>Mobility-focused concept exploring form and function with retrofitted parts.</p>
     </div>
+  </div>
+</body>
+</html>
+🔹 4. cv.html
+html
+Copy
+Edit
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Jack Simm – CV</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', Tahoma, sans-serif;
+      background: #f9f9f9;
+      color: #222;
+    }
+    nav {
+      background: #fff;
+      padding: 20px;
+      text-align: center;
+      font-weight: bold;
+    }
+    nav a {
+      margin: 0 15px;
+      text-decoration: none;
+      color: #222;
+    }
+    .pdf-container {
+      display: flex;
+      justify-content: center;
+      padding: 40px;
+    }
+    iframe {
+      width: 100%;
+      max-width: 1000px;
+      height: 90vh;
+      border: none;
+    }
+  </style>
+</head>
+<body>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="projects.html">Projects</a>
+    <a href="gallery.html">Gallery</a>
+    <a href="cv.html">CV</a>
+  </nav>
+  <div class="pdf-container">
+    <iframe src="Jack_Simm_CV.pdf"></iframe>
   </div>
 </body>
 </html>
