--- a/cv.html
+++ b/cv.html
@@ -16,20 +16,16 @@
       padding: 20px;
       text-align: center;
       font-weight: bold;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.05);
     }
     nav a {
       margin: 0 15px;
       text-decoration: none;
       color: #222;
     }
-    nav a:hover {
-      text-decoration: underline;
-    }
     .pdf-container {
-      padding: 40px 20px;
       display: flex;
       justify-content: center;
+      padding: 40px;
     }
     iframe {
       width: 100%;
@@ -46,7 +42,6 @@
     <a href="gallery.html">Gallery</a>
     <a href="cv.html">CV</a>
   </nav>
-
   <div class="pdf-container">
     <iframe src="Jack_Simm_CV.pdf"></iframe>
   </div>
