--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
       font-weight: bold;
       position: relative;
     }
+    .left {
+      cursor: pointer;
+    }
     .dropdown {
       position: absolute;
       top: 60px;
@@ -35,9 +38,6 @@
       text-decoration: none;
       color: #222;
       border-bottom: 1px solid #eee;
-    }
-    header .left {
-      cursor: pointer;
     }
     main {
       display: flex;
@@ -73,6 +73,12 @@
       padding: 20px;
       font-size: 0.9rem;
     }
+    h3 {
+      margin-bottom: 6px;
+    }
+    ul {
+      padding-left: 20px;
+    }
   </style>
 </head>
 <body>
@@ -90,24 +96,38 @@
     <div class="container">
       <div class="info">
         <h1>Jack Simm</h1>
-        <p>Product Designer and Development Manager with a background in engineering and manufacturing.</p>
-        <p>Currently studying Product Design at Middlesex University.</p>
+        <p>Product Designer and Development Manager with a strong background in engineering and manufacturing. I specialise in innovative problem-solving, user-focused design, and delivering practical solutions in real-world settings.</p>
+        <p>Currently studying Product Design at Middlesex University, with experience leading design and production teams, improving operations, and managing design projects in fast-paced environments.</p>
         <a class="button" href="cv.html">View CV</a>
       </div>
       <div class="details">
-        <h3>Experience</h3>
-        <ul>
-          <li>Fabb Brothers – Product Development Manager</li>
-          <li>Unipres – Kaizen, Cost Planning, Maintenance Technician</li>
-        </ul>
-        <h3>Education</h3>
-        <ul>
-          <li>BA Product Design – Middlesex University</li>
-        </ul>
-        <h3>Skills</h3>
-        <ul>
-          <li>CAD, Adobe Suite, Prototyping</li>
-        </ul>
+        <div>
+          <h3>Experience</h3>
+          <ul>
+            <li><strong>Product Development Manager</strong> – Fabb Brothers (2024)</li>
+            <li><strong>Kaizen Team Member</strong> – Unipres UK (2022–2023)</li>
+            <li><strong>Cost Planning Analyst</strong> – Unipres UK (2021–2022)</li>
+            <li><strong>Engineering Maintenance Technician</strong> – Unipres UK (2017–2021)</li>
+          </ul>
+        </div>
+        <div>
+          <h3>Education</h3>
+          <ul>
+            <li><strong>BA Product Design</strong> – Middlesex University (2021–Present)</li>
+            <li><strong>Level 4 HNC</strong> – General Engineering (2019–2021)</li>
+            <li><strong>Level 3 NVQ</strong> – Engineering Maintenance (2017–2019)</li>
+          </ul>
+        </div>
+        <div>
+          <h3>Skills</h3>
+          <ul>
+            <li>CAD Modelling (SolidWorks, Shapr3D)</li>
+            <li>Adobe Suite (Photoshop, Illustrator, InDesign)</li>
+            <li>Rapid Prototyping</li>
+            <li>User-Centred Design</li>
+            <li>Production Coordination</li>
+          </ul>
+        </div>
       </div>
     </div>
   </main>
@@ -115,17 +135,19 @@
   <footer>&copy; 2025 Jack Simm – Portfolio</footer>
 
   <script>
-    function toggleDropdown() {
-      const menu = document.getElementById(\"dropdownMenu\");
-      menu.style.display = (menu.style.display === \"flex\") ? \"none\" : \"flex\";
-    }
+    const toggle = document.querySelector(".left");
+    const menu = document.getElementById("dropdownMenu");
 
-    document.addEventListener(\"click\", function(event) {
-      const menu = document.getElementById(\"dropdownMenu\");
-      const toggle = document.querySelector(\".left\");
-      if (!toggle.contains(event.target) && !menu.contains(event.target)) {
-        menu.style.display = \"none\";
-      }
+    toggle.addEventListener("mouseenter", () => {
+      menu.style.display = "flex";
+    });
+    toggle.addEventListener("mouseleave", () => {
+      setTimeout(() => {
+        if (!menu.matches(":hover")) menu.style.display = "none";
+      }, 200);
+    });
+    menu.addEventListener("mouseleave", () => {
+      menu.style.display = "none";
     });
   </script>
 </body>
