--- a/gallery.html
+++ b/gallery.html
@@ -22,6 +22,14 @@
       color: #222;
       text-decoration: none;
     }
+    nav a:hover {
+      text-decoration: underline;
+    }
+    h1 {
+      text-align: center;
+      margin-top: 40px;
+      font-size: 2rem;
+    }
     .gallery {
       display: flex;
       flex-wrap: wrap;
@@ -29,9 +37,16 @@
       gap: 20px;
       padding: 40px;
     }
-    .gallery img {
+    .gallery-item {
       width: 300px;
+    }
+    .gallery-item img {
+      width: 100%;
       border-radius: 8px;
+    }
+    .gallery-item p {
+      margin: 8px 0 0;
+      text-align: center;
     }
   </style>
 </head>
@@ -42,10 +57,17 @@
     <a href="gallery.html">Gallery</a>
     <a href="cv.html">CV</a>
   </nav>
-  <h1 style="text-align:center;">Gallery</h1>
+
+  <h1>Gallery</h1>
   <div class="gallery">
-    <div><img src="IMG_0633.PNG" alt="Grown With Care" /><p>Grown With Care</p></div>
-    <div><img src="Artboard 1.JPG" alt="Jerry Can Tool" /><p>Jerry Can Tool</p></div>
+    <div class="gallery-item">
+      <img src="IMG_0633.PNG" alt="Grown With Care">
+      <p>Grown With Care</p>
+    </div>
+    <div class="gallery-item">
+      <img src="Artboard 1.JPG" alt="Jerry Can Tool">
+      <p>Jerry Can Tool</p>
+    </div>
   </div>
 </body>
 </html>
