--- a/projects.html
+++ b/projects.html
@@ -15,69 +15,6 @@
       background: #f4f4f4;
       padding: 20px;
       text-align: center;
-    }
-    nav a {
-      margin: 0 15px;
-      text-decoration: none;
-      color: #222;
-    }
-    .container {
-      max-width: 900px;
-      margin: 40px auto;
-      padding: 0 20px;
-    }
-    .project {
-      border-left: 4px solid #222;
-      padding-left: 16px;
-      margin-bottom: 30px;
-    }
-  </style>
-</head>
-<body>
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="projects.html">Projects</a>
-    <a href="gallery.html">Gallery</a>
-    <a href="cv.html">CV</a>
-  </nav>
-  <div class="container">
-    <h1>Projects</h1>
-    <div class="project">
-      <h3>Grown With Care</h3>
-      <p>Smart plant pot with moisture and time-tracking sensors, future app integration.</p>
-    </div>
-    <div class="project">
-      <h3>Jerry Can Tool</h3>
-      <p>Chef-safe ergonomic opener for large commercial containers using CAD and testing.</p>
-    </div>
-    <div class="project">
-      <h3>Transport Device</h3>
-      <p>Mobility-focused concept exploring form and function with retrofitted parts.</p>
-    </div>
-  </div>
-</body>
-</html>
-🔹 4. cv.html
-html
-Copy
-Edit
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Jack Simm – CV</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', Tahoma, sans-serif;
-      background: #f9f9f9;
-      color: #222;
-    }
-    nav {
-      background: #fff;
-      padding: 20px;
-      text-align: center;
       font-weight: bold;
     }
     nav a {
@@ -85,16 +22,26 @@ Edit
       text-decoration: none;
       color: #222;
     }
-    .pdf-container {
-      display: flex;
-      justify-content: center;
-      padding: 40px;
+    nav a:hover {
+      text-decoration: underline;
     }
-    iframe {
-      width: 100%;
-      max-width: 1000px;
-      height: 90vh;
-      border: none;
+    .container {
+      max-width: 900px;
+      margin: 40px auto;
+      padding: 0 20px;
+    }
+    h1 {
+      text-align: center;
+      font-size: 2rem;
+      margin-bottom: 40px;
+    }
+    .project {
+      border-left: 4px solid #222;
+      padding-left: 16px;
+      margin-bottom: 30px;
+    }
+    .project h3 {
+      margin-bottom: 6px;
     }
   </style>
 </head>
@@ -105,8 +52,25 @@ Edit
     <a href="gallery.html">Gallery</a>
     <a href="cv.html">CV</a>
   </nav>
-  <div class="pdf-container">
-    <iframe src="Jack_Simm_CV.pdf"></iframe>
+
+  <div class="container">
+    <h1>Projects</h1>
+
+    <div class="project">
+      <h3>Grown With Care</h3>
+      <p>A smart plant pot system that uses sensors to monitor moisture and ownership duration. Includes potential for app connectivity and user interaction feedback via visual indicators.</p>
+    </div>
+
+    <div class="project">
+      <h3>Jerry Can Tool</h3>
+      <p>Developed an ergonomic tool for chefs to open slippery jerry cans in commercial kitchens. Focused on CAD precision, physical testing, and fit tolerance.</p>
+    </div>
+
+    <div class="project">
+      <h3>Transport Device</h3>
+      <p>A two-year design journey exploring mobility solutions. Combined original manufacturer parts with modern innovations for improved usability.</p>
+    </div>
+
   </div>
 </body>
 </html>
