--- a/gallery.html
+++ b/gallery.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Gallery – Jack Simm</title>
+  <title>Jack Simm – CV</title>
   <style>
     body {
-      font-family: 'Segoe UI', Tahoma, sans-serif;
       margin: 0;
-      background: #f7f7f7;
+      font-family: 'Segoe UI', Tahoma, sans-serif;
+      background: #f9f9f9;
       color: #222;
     }
     nav {
@@ -16,37 +16,26 @@
       padding: 20px;
       text-align: center;
       font-weight: bold;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.05);
     }
     nav a {
       margin: 0 15px;
-      color: #222;
       text-decoration: none;
+      color: #222;
     }
     nav a:hover {
       text-decoration: underline;
     }
-    h1 {
-      text-align: center;
-      margin-top: 40px;
-      font-size: 2rem;
-    }
-    .gallery {
+    .pdf-container {
+      padding: 40px 20px;
       display: flex;
-      flex-wrap: wrap;
       justify-content: center;
-      gap: 20px;
-      padding: 40px;
     }
-    .gallery-item {
-      width: 300px;
-    }
-    .gallery-item img {
+    iframe {
       width: 100%;
-      border-radius: 8px;
-    }
-    .gallery-item p {
-      margin: 8px 0 0;
-      text-align: center;
+      max-width: 1000px;
+      height: 90vh;
+      border: none;
     }
   </style>
 </head>
@@ -58,14 +47,8 @@
     <a href="cv.html">CV</a>
   </nav>
 
-  <h1>Gallery</h1>
-  <div class="gallery">
-    <div class="gallery-item">
-      <img src="IMG_0633.PNG" alt="Grown With Care">
-    </div>
-    <div class="gallery-item">
-      <img src="Artboard 1.JPG" alt="Jerry Can Tool">
-    </div>
+  <div class="pdf-container">
+    <iframe src="Jack_Simm_CV.pdf"></iframe>
   </div>
 </body>
 </html>
