--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
     <div class="container">
       <div class="info">
         <h1>Jack Simm</h1>
-        <p>Product Designer and Development Manager with a strong background in engineering and manufacturing. I specialise in innovative problem-solving, user-focused design, and delivering practical solutions in real-world settings.</p>
-        <p>Currently studying Product Design at Middlesex University, with experience leading design and production teams, improving operations, and managing design projects in fast-paced environments.</p>
+        <p>Product Designer/ Product Development Manager with a strong background in engineering and manufacturing. I specialise in innovative problem-solving, user-focused design, and delivering practical solutions in real-world settings.</p>
+        <p>Currently studying BA Product Design at Middlesex University, with experience leading design and production teams, improving operations, and managing design projects in fast-paced environments.</p>
         <a class="button" href="cv.html">View CV</a>
       </div>
       <div class="details">
