--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
         <div>
           <h3>Education</h3>
           <ul>
-            <li><strong>BA Product Design</strong> – Middlesex University (2021–Present)</li>
-            <li><strong>Level 4 HNC</strong> – General Engineering (2019–2021)</li>
-            <li><strong>Level 3 NVQ</strong> – Engineering Maintenance (2017–2019)</li>
+            <li><strong>BA Product Design</strong> – Middlesex University (2023–Present)</li>
+            <li><strong>Level 4 HNC</strong> – Manufacturing Engineering (2021–2023)</li>
+            <li><strong>Level 3 BTEC</strong> – Engineering (2016–2021)</li>
           </ul>
         </div>
         <div>
