--- a/index.html
+++ b/index.html
@@ -103,11 +103,13 @@
   </header>
 
   <main>
+    <!-- Profile Image & Title -->
     <div style="text-align: center; margin-bottom: 40px;">
       <img src="profile.jpg" alt="Jack Simm" class="profile-pic">
       <h2 style="margin-top: 16px; font-weight: normal;">Product Designer / Product Development Manager</h2>
     </div>
 
+    <!-- Main Content -->
     <div class="container">
       <div class="info">
         <h1>Jack Simm</h1>
@@ -160,4 +162,3 @@
   </script>
 </body>
 </html>
-Update homepage with profile image and layout changes
