--- a/gallery.html
+++ b/gallery.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Jack Simm – CV</title>
+  <title>Gallery – Jack Simm</title>
   <style>
     body {
-      margin: 0;
       font-family: 'Segoe UI', Tahoma, sans-serif;
-      background: #f9f9f9;
+      margin: 0;
+      background: #f7f7f7;
       color: #222;
     }
     nav {
@@ -16,26 +16,25 @@
       padding: 20px;
       text-align: center;
       font-weight: bold;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.05);
     }
     nav a {
       margin: 0 15px;
-      text-decoration: none;
       color: #222;
+      text-decoration: none;
     }
     nav a:hover {
       text-decoration: underline;
     }
-    .pdf-container {
-      padding: 40px 20px;
+    .gallery {
       display: flex;
+      flex-wrap: wrap;
       justify-content: center;
+      gap: 20px;
+      padding: 40px;
     }
-    iframe {
-      width: 100%;
-      max-width: 1000px;
-      height: 90vh;
-      border: none;
+    .gallery img {
+      width: 300px;
+      border-radius: 8px;
     }
   </style>
 </head>
@@ -47,8 +46,10 @@
     <a href="cv.html">CV</a>
   </nav>
 
-  <div class="pdf-container">
-    <iframe src="Jack_Simm_CV.pdf"></iframe>
+  <h1 style="text-align:center;">Gallery</h1>
+  <div class="gallery">
+    <img src="IMG_0633.PNG" alt="Grown With Care" />
+    <img src="Artboard 1.JPG" alt="Jerry Can Tool" />
   </div>
 </body>
 </html>
