--- a/gallery.html
+++ b/gallery.html
@@ -25,6 +25,11 @@
     nav a:hover {
       text-decoration: underline;
     }
+    h1 {
+      text-align: center;
+      margin-top: 40px;
+      font-size: 2rem;
+    }
     .gallery {
       display: flex;
       flex-wrap: wrap;
@@ -46,10 +51,11 @@
     <a href="cv.html">CV</a>
   </nav>
 
-  <h1 style="text-align:center;">Gallery</h1>
+  <h1>Gallery</h1>
   <div class="gallery">
     <img src="IMG_0633.PNG" alt="Grown With Care" />
     <img src="Artboard 1.JPG" alt="Jerry Can Tool" />
   </div>
 </body>
 </html>
+
