--- a/index.html
+++ b/index.html
@@ -103,10 +103,13 @@
   </header>
 
   <main>
-    <!-- Profile Image & Title -->
-    <div style="text-align: center; margin-bottom: 40px;">
+    <!-- Profile Image & Title (Left-Aligned) -->
+    <div style="display: flex; align-items: center; gap: 24px; margin-bottom: 40px;">
       <img src="profile.jpg" alt="Jack Simm" class="profile-pic">
-      <h2 style="margin-top: 16px; font-weight: normal;">Product Designer / Product Development Manager</h2>
+      <div>
+        <h2 style="margin: 0; font-weight: normal;">Product Designer</h2>
+        <h2 style="margin: 4px 0 0; font-weight: normal;">Product Development Manager</h2>
+      </div>
     </div>
 
     <!-- Main Content -->
