--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       justify-content: center;
       padding: 60px 20px;
       flex-direction: column;
-      align-items: center;
+      align-items: flex-start;
     }
     .container {
       max-width: 1000px;
@@ -52,8 +52,9 @@
       border-radius: 16px;
       padding: 40px;
       display: flex;
-      flex-direction: column;
-      gap: 40px;
+      flex-wrap: wrap;
+      gap: 60px;
+      margin-left: 40px;
     }
     .info, .details {
       flex: 1 1 400px;
@@ -100,18 +101,16 @@
   </header>
 
   <main>
-    <!-- Profile Image & Title Fully Left-Aligned -->
-    <div class="container" style="margin-bottom: 0;">
-      <div style="display: flex; align-items: center; gap: 24px;">
-        <img src="profile.jpg" alt="Jack Simm" class="profile-pic">
-        <div>
-          <h2 style="margin: 0; font-weight: normal;">Product Designer</h2>
-          <h2 style="margin: 4px 0 0; font-weight: normal;">Product Development Manager</h2>
-        </div>
+    <!-- Fully Left-Aligned Image & Title -->
+    <div style="display: flex; align-items: center; gap: 24px; margin: 40px 0 40px 40px;">
+      <img src="profile.jpg" alt="Jack Simm" class="profile-pic">
+      <div>
+        <h2 style="margin: 0; font-weight: normal;">Product Designer</h2>
+        <h2 style="margin: 4px 0 0; font-weight: normal;">Product Development Manager</h2>
       </div>
     </div>
 
-    <!-- Main Content -->
+    <!-- Main Content Container -->
     <div class="container">
       <div class="info">
         <h1>Jack Simm</h1>
