--- a/gallery.html
+++ b/gallery.html
@@ -38,8 +38,11 @@
       padding: 40px;
     }
     .gallery img {
-      width: 300px;
+      max-width: 300px;
+      width: 100%;
+      height: auto;
       border-radius: 8px;
+      object-fit: contain;
     }
   </style>
 </head>
@@ -58,4 +61,3 @@
   </div>
 </body>
 </html>
-
