--- a/gallery.html
+++ b/gallery.html
@@ -44,8 +44,9 @@
     }
 
     .gallery img {
-      max-width: 300px;
-      width: 100%;
+      max-width: 100%;
+      width: auto;
+      max-height: 300px;
       height: auto;
       border-radius: 8px;
       object-fit: contain;
@@ -57,24 +58,23 @@
       transform: scale(1.05);
     }
 
-    /* Lightbox Styles */
     .lightbox {
       position: fixed;
       top: 0;
       left: 0;
       width: 100%;
       height: 100%;
-      background: rgba(0, 0, 0, 0.8);
+      background: rgba(0, 0, 0, 0.85);
       display: none;
       align-items: center;
       justify-content: center;
-      z-index: 1000;
+      z-index: 999;
     }
 
     .lightbox img {
       max-width: 90%;
       max-height: 90%;
-      border-radius: 8px;
+      border-radius: 10px;
       box-shadow: 0 0 20px rgba(0,0,0,0.5);
     }
   </style>
@@ -94,7 +94,6 @@
     <img src="Artboard 1.JPG" alt="Jerry Can Tool" onclick="openLightbox(this.src)" />
   </div>
 
-  <!-- Lightbox Modal -->
   <div class="lightbox" id="lightbox" onclick="closeLightbox()">
     <img id="lightbox-img" src="" alt="Expanded view">
   </div>
