--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       background: #d7e5db;
       color: #222;
     }
+
     header {
       display: flex;
       justify-content: space-between;
@@ -19,9 +20,11 @@
       font-weight: bold;
       position: relative;
     }
+
     .left {
       cursor: pointer;
     }
+
     .dropdown {
       position: absolute;
       top: 60px;
@@ -33,32 +36,42 @@
       flex-direction: column;
       z-index: 10;
     }
+
     .dropdown a {
       padding: 12px 20px;
       text-decoration: none;
       color: #222;
       border-bottom: 1px solid #eee;
     }
+
     main {
       display: flex;
-      justify-content: center;
+      justify-content: flex-start;
       padding: 60px 20px;
       flex-direction: column;
       align-items: flex-start;
     }
+
     .container {
       max-width: 1000px;
       background: #fff;
       border-radius: 16px;
       padding: 40px;
       display: flex;
-      flex-wrap: wrap;
-      gap: 60px;
+      flex-direction: column;
+      gap: 40px;
       margin-left: 40px;
     }
-    .info, .details {
-      flex: 1 1 400px;
+
+    .profile-pic {
+      width: 180px;
+      height: 180px;
+      border-radius: 50%;
+      object-fit: cover;
+      filter: grayscale(100%);
+      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
     }
+
     .button {
       background: #222;
       color: white;
@@ -68,24 +81,19 @@
       display: inline-block;
       margin-top: 20px;
     }
+
     footer {
       text-align: center;
       padding: 20px;
       font-size: 0.9rem;
     }
+
     h3 {
       margin-bottom: 6px;
     }
+
     ul {
       padding-left: 20px;
-    }
-    .profile-pic {
-      width: 180px;
-      height: 180px;
-      border-radius: 50%;
-      object-fit: cover;
-      filter: grayscale(100%);
-      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
     }
   </style>
 </head>
@@ -101,7 +109,7 @@
   </header>
 
   <main>
-    <!-- Fully Left-Aligned Image & Title -->
+    <!-- Profile Image & Titles -->
     <div style="display: flex; align-items: center; gap: 24px; margin: 40px 0 40px 40px;">
       <img src="profile.jpg" alt="Jack Simm" class="profile-pic">
       <div>
@@ -110,16 +118,16 @@
       </div>
     </div>
 
-    <!-- Main Content Container -->
-    <div class="container">
-      <div class="info">
-        <h1>Jack Simm</h1>
+    <!-- Name, Bio, and Experience Side-by-Side -->
+    <div class="container" style="display: flex; align-items: flex-start; gap: 60px;">
+      <div style="flex: 1;">
+        <h1 style="margin-top: 0;">Jack Simm</h1>
         <p>Product Designer and Development Manager with a strong background in engineering and manufacturing. I specialise in innovative problem-solving, user-focused design, and delivering practical solutions in real-world settings.</p>
         <p>Currently studying Product Design at Middlesex University, with experience leading design and production teams, improving operations, and managing design projects in fast-paced environments.</p>
         <a class="button" href="cv.html">View CV</a>
       </div>
 
-      <div class="details">
+      <div style="flex: 1;">
         <div>
           <h3>Experience</h3>
           <ul>
@@ -152,11 +160,13 @@
     toggle.addEventListener("mouseenter", () => {
       menu.style.display = "flex";
     });
+
     toggle.addEventListener("mouseleave", () => {
       setTimeout(() => {
         if (!menu.matches(":hover")) menu.style.display = "none";
       }, 200);
     });
+
     menu.addEventListener("mouseleave", () => {
       menu.style.display = "none";
     });
