--- a/index.html
+++ b/index.html
@@ -90,10 +90,21 @@
 
     h3 {
       margin-bottom: 6px;
+      font-size: 1.4rem;
     }
 
     ul {
       padding-left: 20px;
+    }
+
+    .row {
+      display: flex;
+      gap: 60px;
+      align-items: flex-start;
+    }
+
+    .column {
+      flex: 1;
     }
   </style>
 </head>
@@ -110,7 +121,7 @@
 
   <main>
     <!-- Profile Image & Titles -->
-    <div style="display: flex; align-items: center; gap: 24px; margin: 40px 0 40px 40px;">
+    <div style="display: flex; align-items: center; gap: 24px; margin: 40px 0 20px 40px;">
       <img src="profile.jpg" alt="Jack Simm" class="profile-pic">
       <div>
         <h2 style="margin: 0; font-weight: normal;">Product Designer</h2>
@@ -118,17 +129,19 @@
       </div>
     </div>
 
-    <!-- Name, Bio, and Experience Side-by-Side -->
-    <div class="container" style="display: flex; align-items: flex-start; gap: 60px;">
-      <div style="flex: 1;">
-        <h1 style="margin-top: 0;">Jack Simm</h1>
-        <p>Product Designer and Development Manager with a strong background in engineering and manufacturing. I specialise in innovative problem-solving, user-focused design, and delivering practical solutions in real-world settings.</p>
-        <p>Currently studying Product Design at Middlesex University, with experience leading design and production teams, improving operations, and managing design projects in fast-paced environments.</p>
-        <a class="button" href="cv.html">View CV</a>
-      </div>
+    <!-- Side-by-side layout for Bio and Experience -->
+    <div class="container">
+      <div class="row">
+        <!-- Bio Column -->
+        <div class="column">
+          <h3>Jack Simm</h3>
+          <p>Product Designer and Development Manager with a strong background in engineering and manufacturing. I specialise in innovative problem-solving, user-focused design, and delivering practical solutions in real-world settings.</p>
+          <p>Currently studying Product Design at Middlesex University, with experience leading design and production teams, improving operations, and managing design projects in fast-paced environments.</p>
+          <a class="button" href="cv.html">View CV</a>
+        </div>
 
-      <div style="flex: 1;">
-        <div>
+        <!-- Experience and Skills Column -->
+        <div class="column">
           <h3>Experience</h3>
           <ul>
             <li><strong>Product Development Manager</strong> – Fabb Brothers (2024)</li>
@@ -136,9 +149,8 @@
             <li><strong>Cost Planning Analyst</strong> – Unipres UK (2021–2022)</li>
             <li><strong>Engineering Maintenance Technician</strong> – Unipres UK (2017–2021)</li>
           </ul>
-        </div>
-        <div>
-          <h3>Skills</h3>
+
+          <h3 style="margin-top: 30px;">Skills</h3>
           <ul>
             <li>CAD Modelling (SolidWorks, Shapr3D)</li>
             <li>Adobe Suite (Photoshop, Illustrator, InDesign)</li>
