--- a/index.html
+++ b/index.html
@@ -47,9 +47,40 @@
     main {
       display: flex;
       justify-content: flex-start;
-      padding: 60px 20px;
+      padding: 0;
       flex-direction: column;
       align-items: flex-start;
+    }
+
+    .banner {
+      background-image: url('IMG_5572.JPG');
+      background-size: cover;
+      background-position: center;
+      padding: 60px 40px;
+      width: 100%;
+      display: flex;
+      justify-content: flex-start;
+    }
+
+    .profile-block {
+      display: flex;
+      align-items: center;
+      gap: 24px;
+    }
+
+    .profile-pic {
+      width: 180px;
+      height: 180px;
+      border-radius: 50%;
+      object-fit: cover;
+      filter: grayscale(100%);
+      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+    }
+
+    .titles h2 {
+      margin: 0;
+      font-weight: normal;
+      color: #fff;
     }
 
     .container {
@@ -60,16 +91,7 @@
       display: flex;
       flex-direction: column;
       gap: 40px;
-      margin-left: 40px;
-    }
-
-    .profile-pic {
-      width: 180px;
-      height: 180px;
-      border-radius: 50%;
-      object-fit: cover;
-      filter: grayscale(100%);
-      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+      margin: 40px;
     }
 
     .button {
@@ -101,10 +123,12 @@
       display: flex;
       gap: 60px;
       align-items: flex-start;
+      flex-wrap: wrap;
     }
 
     .column {
       flex: 1;
+      min-width: 300px;
     }
   </style>
 </head>
@@ -120,19 +144,21 @@
   </header>
 
   <main>
-    <!-- Profile Image & Titles -->
-    <div style="display: flex; align-items: center; gap: 24px; margin: 40px 0 20px 40px;">
-      <img src="profile.jpg" alt="Jack Simm" class="profile-pic">
-      <div>
-        <h2 style="margin: 0; font-weight: normal;">Product Designer</h2>
-        <h2 style="margin: 4px 0 0; font-weight: normal;">Product Development Manager</h2>
+    <!-- Banner Section -->
+    <div class="banner">
+      <div class="profile-block">
+        <img src="profile.jpg" alt="Jack Simm" class="profile-pic">
+        <div class="titles">
+          <h2>Product Designer</h2>
+          <h2>Product Development Manager</h2>
+        </div>
       </div>
     </div>
 
-    <!-- Side-by-side layout for Bio and Experience -->
+    <!-- Bio + Experience/Skills -->
     <div class="container">
       <div class="row">
-        <!-- Bio Column -->
+        <!-- Bio -->
         <div class="column">
           <h3>Jack Simm</h3>
           <p>Product Designer and Development Manager with a strong background in engineering and manufacturing. I specialise in innovative problem-solving, user-focused design, and delivering practical solutions in real-world settings.</p>
@@ -140,7 +166,7 @@
           <a class="button" href="cv.html">View CV</a>
         </div>
 
-        <!-- Experience and Skills Column -->
+        <!-- Experience + Skills -->
         <div class="column">
           <h3>Experience</h3>
           <ul>
